--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@
     --secondary-color: #F05454;
     --font: "Nunito Sans", sans-serif;
 }
-/* código omitido */
 
 body {
     background-color: var(--bg-color);
@@ -15,31 +14,53 @@ body {
     height: 100vh;
     margin: 0;
 }
-/* código omitido */
-
-/* código omitido */
-
-header {
-    background-color: var(--primary-color);
-    text-align: center;
-    padding: 1px;
-}
-/* código omitido */
-/* código omitido */
 
 h1 {
     font-size: 2rem;
     color: var(--bg-color);
      font-weight: 700;
 }
-/* código omitido */
+
+nav {
+    display: flex;
+    justify-content: center;
+    font-weight: 400;
+}
+
+.graficos-container {
+    margin: 5rem;
+   }
+
+   .graficos-container_texto {
+    font-size: 1.3rem;
+  text-align: center;
+  padding: 2rem;
+  border: var(--secondary-color) solid 2px;
+  }
+  
+
+nav a {
+    color: var(--bg-color);
+     margin: 0 2rem 1rem 0rem;
+     font-size: 1.2rem;
+}
+
+header {
+    background-color: var(--primary-color);
+    text-align: center;
+    padding: 1px;
+}
 
 nav a:hover {
     text-decoration: underline;
     transform: scale(0.90);
     transition: transform 0.1s;
-}
-/* código omitido */
+    }
+
+    span {
+        font-weight: bold;
+        color: var(--secondary-color);
+       }
 
 footer {
     display: flex;
